--- a/index.html
+++ b/index.html
@@ -10,10 +10,17 @@
 <body>
     <main>
         <section id="telefone">
-            <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
+            <iframe src="home.html" name="tela" id="tela" frameborder="0">
+                Seu navegador não é compatível com a exibição do iframe.    
+            </iframe>
         </section>
         <section id="redes-sociais">
-
+            <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a> <br>
+            <a href="linkedin.html" target="tela"><img src="imagens/logomarca-linkedin.jpg" alt="Linkedin"></a> <br>
+            <a href="github.html" target="tela"><img src="imagens/logo-github.jpg" alt="GitHub"></a> <br>
+            <a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a> <br>
+            <a href="instagram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instragram"></a> <br>
+            <a href="twitter.html" target="tela"><img src="imagens/logomarca-x.png" alt="Twitter"></a>
         </section>
     </main>
 </body>
