--- a/github.html
+++ b/github.html
@@ -4,38 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GitHub</title>
-    <style>
-        * {
-            margin: 0px;
-            padding: 0px;
-            font-family: 'Times New Roman', Times, serif;
-        }
-
-        img {
-            width: 230vw;
-        } 
-
-        body {
-            background-color: #1F2328;
-        }
-
-        ::-webkit-scrollbar {
-            height: 0px;
-            width: 0px;
-        }
-
-        a {
-            display: block;
-            text-align: center;
-            text-decoration: none;
-            background-color: #1F2328;
-            color: white;
-            padding: 20px;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
+    <link rel="stylesheet" href="css/github.css">
 </head>
 <body>
     <img src="imagens/tela-github.png" alt="github">
