--- a/instagram.html
+++ b/instagram.html
@@ -4,38 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instagram</title>
-    <style>
-        * {
-            margin: 0px;
-            padding: 0px;
-            font-family: 'Times New Roman', Times, serif;
-        }
-
-        img {
-            width: 230vw;
-        } 
-
-        body {
-            background-image: linear-gradient(to right, #910AF8, #DC04E2, #FC02CC, #FF0A61, #FF3626, rgb(245, 161, 5));
-        }
-
-        ::-webkit-scrollbar {
-            height: 0px;
-            width: 0px;
-        }
-
-        a {
-            display: block;
-            text-align: center;
-            text-decoration: none;
-            background-image: linear-gradient(to right, #910AF8, #DC04E2, #FC02CC, #FF0A61, #FF3626, rgb(245, 161, 5));
-            color: white;
-            padding: 20px;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-    </style>
+    <link rel="stylesheet" href="css/instagram.css">
 </head>
 <body>
     <img src="imagens/tela-instagramelaine.png" alt="Instagram">
