Atualização das fotos

--- a/instagram.html
+++ b/instagram.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/instagram.css">
 </head>
 <body>
-    <img src="imagens/tela-instagramelaine.png" alt="Instagram">
+    <img src="imagens/telainstragram.jpg" alt="Instagram">
     <a href="https://www.instagram.com/elaine.nany88/" target="_blank" rel="external">Instagram</a>
 </body>
 </html>
