--- a/linkedin.html
+++ b/linkedin.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/linkedin.css">
 </head>
 <body>
-    <img src="imagens/tela-linkedin.png" alt="LinkedIn">
+    <img src="imagens/tela-linkedin.jpg" alt="LinkedIn">
     <a href="https://www.linkedin.com/in/elaine-souza-bb3188a3/" target="_blank" rel="external">Perfil LinkedIn</a>
 </body>
 </html>
