--- a/twitter.html
+++ b/twitter.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/twitter.css">
 </head>
 <body>
-        <img src="imagens/tela-twitter.png" alt="Twitter">
+        <img src="imagens/tela-twitter.jpg" alt="Twitter">
         <a href="https://x.com/Elaine88Nany" target="_blank" rel="external">Twitter</a>
 </body>
 </html>
